--- a/backend/market_research/src/market_research/config/tasks.yaml
+++ b/backend/market_research/src/market_research/config/tasks.yaml
@@ -1,81 +1,93 @@
-# 1) MARKET RESEARCH
+# 1) MARKET RESEARCH (Detailed but Efficient)
 research_task:
   description: >
-    Investigate the market for "{startup_idea}" in the {topic} sector. Define the market,
-    target customers, key use cases, demand drivers, inhibitors, and regulatory notes.
-    Collect defensible data points (market size, growth claims, pricing ranges) and ALWAYS include citations.
+    Conduct comprehensive market research for "{startup_idea}" in the {topic} sector.
+    Use 3-4 strategic web searches to get detailed insights. Define the market thoroughly,
+    identify top 5 competitors with detailed analysis, capture key trends, and get reliable market size data.
+    Use scrape tool ONLY for 1-2 key competitor websites if you need in-depth details.
+    Be thorough but structured—aim for quality insights, not just bullet points.
   expected_output: >
-    Markdown with:
-    - Overview (what the market is, who buys, main jobs-to-be-done)
-    - Size & growth claims (quote numbers + name the source)
-    - Demand drivers & inhibitors (bulleted, concise)
-    - Risks & compliance notes (if any)
-    - Inline citation markers like [1], [2] in the text
-    - Sources list with 6–10 bullets: Title — URL — Accessed: YYYY-MM-DD
-    - Every numeric claim must map to one of the sources.
+    Detailed Markdown report:
+    
+    ## Market Overview (150-200 words)
+    - Comprehensive definition of the market: what it is, who the buyers are, main use cases
+    - Market size and growth trajectory (specific numbers with source [1])
+    - Key market dynamics and structure
+    
+    ## Competitive Landscape (200-250 words)
+    - Competitive positioning summary (2-3 paragraphs)
+    - Top 5 competitors with detailed analysis:
+      • [Company Name](URL) - 2-3 sentences on positioning, pricing, key features, differentiation
+      • [Company Name](URL) - 2-3 sentences on positioning, pricing, key features, differentiation
+      • ... (repeat for all 5)
+    
+    ## Market Trends & Drivers (150-200 words)
+    - 3-4 detailed bullets on key industry trends with analysis
+    - Discussion of demand drivers and market inhibitors
+    - Regulatory or technological factors shaping the market
+    
+    ## Opportunities & Risks (150 words)
+    - Opportunities (2-3 detailed bullets with specific market gaps)
+    - Risks (2-3 detailed bullets with specific threats or challenges)
+    
+    ## Sources (5-8 URLs)
+    [1] Title — [URL](link) — Accessed: YYYY-MM-DD
+    [2] Title — [URL](link) — Accessed: YYYY-MM-DD
+    ...
   acceptance_criteria: >
-    - Each numeric claim has an inline marker and a matching source entry with URL + access date.
-    - No hand-wavy phrases (“huge”, “massive”) without numbers.
-    - Clear distinction between facts vs assumptions.
+    - Each section is detailed with multi-sentence paragraphs (not one-liners)
+    - Competitor analysis includes specific positioning, pricing, and differentiation
+    - Market size cites specific numbers with inline citations
+    - All sections provide comprehensive insights
+    - Total length: 650-800 words (excluding sources)
   agent: researcher
   inputs:
     startup_idea: "{startup_idea}"
     topic: "{topic}"
 
-# 2) COMPETITIVE ANALYSIS
-competitive_analysis_task:
-  description: >
-    Identify and analyze competitors/alternatives for "{startup_idea}" in the {topic} space.
-    Focus on positioning, pricing, differentiation, and stage (bootstrapped/Seed/Series A+).
-    Highlight whitespace opportunities the startup can target.
-  expected_output: >
-    Markdown with:
-    - Short competitive landscape summary
-    - A structured table with columns:
-      [Name, Geo, Stage, Customer (B2B/B2C), Pricing (range/tier), Key Features,
-       Differentiators, Notes, Source URL]
-    - 3–5 bullets on whitespace/opportunities
-    - Each table row must include a Source URL.
-  acceptance_criteria: >
-    - Table contains 8–15 relevant competitors or credible substitutes.
-    - Pricing and differentiators are specific (no vague “affordable”, “better UX”).
-    - Each row has at least one source URL that resolves.
-  agent: competitive_analyst
-  inputs:
-    startup_idea: "{startup_idea}"
-    topic: "{topic}"
-
-# 3) FORECAST (LLM-PROVIDED NUMBERS → CHART)
+# 2) FORECAST (Detailed Assumptions)
 forecast_task:
   description: >
-    Using the research + competitor insights, produce a realistic 5-year growth forecast for
-    "{startup_idea}" expressed as VALID JSON for charting. Start from {start_year} and include
-    exactly 5 yearly points. Include a brief Markdown summary of assumptions FIRST, then a JSON code block.
-    Place the JSON at the end; do not include any text after it.
+    Using the comprehensive research insights, produce a realistic and data-driven 5-year growth forecast
+    for "{startup_idea}". Base your projections on the market size, competitive landscape, and trends
+    identified in the research. Provide detailed assumptions and reasoning for your forecast model.
+    Express as VALID JSON for charting. Start from {start_year}.
   expected_output: >
-    1) Markdown: 3–6 sentences on key assumptions (adoption, pricing, segment focus).
-    2) A JSON code block fenced with ```json and EXACT shape:
-       {
-         "title": "Forecast for {startup_idea}",
-         "unit": "{unit}",        // e.g., USD, users, transactions
-         "series": [
-           { "year": {start_year},     "value": 50000 },
-           { "year": {start_year+1},   "value": 80000 },
-           { "year": {start_year+2},   "value": 120000 },
-           { "year": {start_year+3},   "value": 160000 },
-           { "year": {start_year+4},   "value": 210000 }
-         ],
-         "scenarios": ["base","optimistic"]   // names only; single-line chart for now
-       }
-    Rules:
-    - Years must be integers in ascending order starting at {start_year}, exactly 5 points.
-    - Values must be pure numbers (no commas, currency symbols, or % signs).
-    - JSON must be the final content of the message; nothing after the closing fence.
-    - If scenarios aren’t used, return "scenarios": [].
+    ## Forecast Assumptions (150-200 words)
+    
+    Detail your forecasting methodology:
+    - Revenue model and pricing assumptions
+    - Market penetration and adoption rates
+    - Key assumptions about customer acquisition, retention, and growth drivers
+    - Conservative vs. optimistic scenarios
+    - Year-over-year growth rationale (why growth accelerates or decelerates)
+    
+    ## CHART DATA (REQUIRED - MUST BE VALID JSON):
+    
+    You MUST output a valid JSON object that can be directly used for charting. The JSON must follow this EXACT structure:
+    
+    ```json
+    {
+      "title": "5-Year Growth Forecast for {startup_idea}",
+      "unit": "{unit}",
+      "series": [
+        { "year": {start_year}, "value": 100000 },
+        { "year": {start_year+1}, "value": 250000 },
+        { "year": {start_year+2}, "value": 500000 },
+        { "year": {start_year+3}, "value": 850000 },
+        { "year": {start_year+4}, "value": 1300000 }
+      ],
+      "scenarios": ["conservative", "optimistic"]
+    }
+    ```
+    
+    IMPORTANT: The JSON must be valid and parseable. Use numeric values only (no commas, no currency symbols, no % signs).
   acceptance_criteria: >
-    - JSON parses without errors and matches the schema.
-    - Years are unique and strictly increasing: {start_year}..{start_year+4}.
-    - All values are numeric; units appear ONLY in "unit".
+    - Assumptions are detailed and explain the reasoning for each year's growth
+    - JSON parses without errors
+    - Exactly 5 years from {start_year} to {start_year+4}
+    - Values are numeric (no commas or currency symbols)
+    - Growth trajectory is explained and justified
   agent: forecast_analyst
   inputs:
     startup_idea: "{startup_idea}"
@@ -83,61 +95,61 @@ forecast_task:
     start_year: "{start_year}"
     unit: "{unit}"
 
-# 4) REPORT SYNTHESIS
+# 3) REPORT SYNTHESIS (Comprehensive Executive Summary)
 synthesis_task:
   description: >
-    Combine the outputs from the research, competitive analysis, and forecast tasks into a single,
-    professional market research report for "{startup_idea}".
-    The report should read like an executive briefing: concise, structured, and factual.
-    Preserve all URLs and citations from previous tasks. When a competitor, data point, or source
-    is mentioned, include the original Source URL in Markdown link format — for example:
-    [Afresh](https://www.afresh.com).
-    Do NOT modify or restate the forecast JSON; simply reference it in the Forecast section.
-    The final report must be fully self-contained, readable, and ready for export or display in a web app.
-
+    Create a comprehensive executive summary combining research + forecast for "{startup_idea}".
+    This should be a detailed, professional report suitable for investors or decision-makers.
+    Preserve all URLs and citations from research. Expand on the insights—don't just summarize.
+    Make it thorough and insightful while maintaining clarity and structure.
   expected_output: >
-    Markdown document with the following sections:
-
-    1. **Title & Executive Summary**
-       - 1–2 paragraphs summarizing the startup, market space, and key findings.
-       - Focus on clarity and readability — write like an investor briefing.
-
-    2. **Market Overview**
-       - Summarize key insights from the research task: market size, growth rates, drivers, and inhibitors.
-       - Use inline citation markers (e.g., [1], [2]) that correspond to URLs in the Sources section.
-
-    3. **Key Trends & Drivers**
-       - 4–6 concise bullet points describing relevant trends or dynamics shaping the market.
-       - Include inline citations for each data-driven claim.
-
-    4. **Competitive Landscape**
-       - Summarize findings from the competitive analysis.
-       - Mention top competitors as Markdown links, e.g., [Afresh](https://www.afresh.com).
-       - Highlight each competitor’s positioning, unique feature, and whitespace opportunity.
-       - If a table was produced earlier, note that the full competitor table is available.
-
-    5. **Forecast Summary**
-       - Reference the forecast JSON produced earlier.
-       - Do NOT alter or restate any numbers — simply summarize assumptions and implications.
-       - Example phrasing: “See the 5-year forecast JSON above for detailed projections.”
-
-    6. **Opportunities & Risks**
-       - 3–5 bullet points each for opportunities and risks, written for strategic clarity.
-       - Balance optimism with realism.
-
-    7. **Sources & Citations**
-       - Combine all unique URLs and citations from research and competitive analysis.
-       - Format as a numbered Markdown list with:  
-         *Title* — [URL](https://example.com) — *Accessed: YYYY-MM-DD*  
-       - Ensure each inline marker [1], [2] maps to a real source.
-
+    Complete Executive Market Research Report:
+    
+    ## Executive Summary (200-250 words)
+    - Comprehensive overview of the startup idea and its market positioning
+    - Key findings and insights (4-5 paragraphs)
+    - Market opportunity size and potential
+    - Strategic implications for the startup
+    
+    ## Market Analysis (250-300 words)
+    - Detailed market overview based on research
+    - Market size, growth trends, and dynamics [1]
+    - Target customer segments and buyer personas
+    - Key industry trends and drivers shaping the market
+    - Market structure and competitive dynamics
+    
+    ## Competitive Intelligence (250-300 words)
+    - Summary of competitive landscape positioning
+    - Detailed analysis of top 3-4 competitors with links: [Company Name](URL)
+    - Each competitor's positioning, strengths, and differentiation
+    - Market gaps and white space opportunities
+    - Competitive advantages and challenges
+    
+    ## Growth Forecast & Strategy (200-250 words)
+    - Summary of the 5-year forecast (reference JSON from forecast_task)
+    - Detailed discussion of growth assumptions and rationale
+    - Key milestones and inflection points
+    - Strategic implications for go-to-market approach
+    - Investment requirements and scaling considerations
+    
+    ## Strategic Recommendations (200 words)
+    - Opportunities (3-4 detailed recommendations with specific actions)
+    - Risks and mitigation strategies (3-4 detailed points)
+    - Key success factors
+    - Next steps and recommendations
+    
+    ## Sources & Citations
+    [1] Title — [URL](link) — Accessed: YYYY-MM-DD
+    [2] Title — [URL](link) — Accessed: YYYY-MM-DD
+    ... (all sources from research)
+    
   acceptance_criteria: >
-    - The report contains all 7 sections with clear Markdown headings.
-    - Inline citations are preserved and map to the Sources section.
-    - All competitor mentions and references retain clickable Markdown URLs.
-    - The forecast JSON is referenced but not modified.
-    - Tone is factual, confident, and easy to skim (no filler language or repetition).
-
+    - Each section is comprehensive with detailed analysis (not summaries)
+    - Total length: 1,100-1,400 words (excluding sources)
+    - All URLs and citations preserved from research
+    - Competitors listed with clickable markdown links
+    - Forecast referenced with detailed explanation
+    - Professional tone suitable for investor presentation
   agent: report_synthesizer
   inputs:
     startup_idea: "{startup_idea}"
