--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.13.1",
+    "framer-motion": "^11.18.2",
     "next": "15.5.6",
     "node": "^18.20.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-markdown": "^9.1.0",
     "recharts": "^3.3.0",
     "zod": "^4.1.12"
   },
