--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,10 +1,12 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip", "python311Packages.setuptools", "python311Packages.wheel"]
+nixPkgs = ["python311Full"]
 
 [phases.install]
 cmds = [
-  "pip3 install -r api/requirements.txt",
-  "pip3 install -e market_research"
+  "python3 -m ensurepip --upgrade",
+  "python3 -m pip install --upgrade pip setuptools wheel",
+  "python3 -m pip install -r api/requirements.txt",
+  "python3 -m pip install -e market_research"
 ]
 
 [start]
