fix: use venv to bypass PEP 668 restrictions

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -3,12 +3,12 @@ nixPkgs = ["python311Full"]
 
 [phases.install]
 cmds = [
-  "python3 -m ensurepip --upgrade",
-  "python3 -m pip install --upgrade pip setuptools wheel",
-  "python3 -m pip install -r api/requirements.txt",
-  "python3 -m pip install -e market_research"
+  "python3 -m venv /app/venv",
+  "/app/venv/bin/pip install --upgrade pip setuptools wheel",
+  "/app/venv/bin/pip install -r api/requirements.txt",
+  "/app/venv/bin/pip install -e market_research"
 ]
 
 [start]
-cmd = "python3 -m uvicorn api.app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "/app/venv/bin/python -m uvicorn api.app.main:app --host 0.0.0.0 --port $PORT"
 
