--- a/backend/api/requirements.txt
+++ b/backend/api/requirements.txt
@@ -2,5 +2,4 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 pydantic>=2.0.0
 python-dotenv>=1.0.0
-crewai>=0.28.0
-crewai-tools>=0.1.0
+crewai[tools]>=0.150.0,<1.0.0
